--- a/css/base.css
+++ b/css/base.css
@@ -1,13 +1,29 @@
 body {
     margin: 0;
-    font-family: 'Open-Sans', sans-serif;
+    font-family: "Open-Sans", sans-serif;
 }
 
 a {
     text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4,h5, h6, p {
     padding: 0;
     margin: 0;
+}
+
+button {
+    width: 165px;
+    height: 49px;
+    left: 1205px;
+    top: 25px;
+    background: #d23166;
+    border-radius: 5px;
+    border: none;
+    font-family: Hind Madurai;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 22px;
+    color: #fafafa;
 }
