--- a/css/components/header.css
+++ b/css/components/header.css
@@ -5,10 +5,14 @@
 
 .header__menu {
     list-style: none;
-    justify-content: space-around;
+}
+
+.nav__logo {
+    margin-top: 10px;
 }
 
 .nav__item {
+    right: 10px;
     margin-top: 15px;
 }
 
@@ -25,4 +29,8 @@
 
 .nav__link:hover {
     color: #d23166;
+}
+
+.nav__button {
+    margin-top: 25px;
 }
