--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Madurai&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Hind+Madurai&display=swap');
