--- a/css/components/header.css
+++ b/css/components/header.css
@@ -5,6 +5,7 @@
 
 .header__menu {
     list-style: none;
+    justify-content: space-around;
 }
 
 .nav__logo {
@@ -12,17 +13,16 @@
 }
 
 .nav__item {
-    right: 10px;
-    margin-top: 15px;
-}
-
-.nav__link {
+    margin-top: 25px;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
-    font-weight: bold;
+    color: #150101;
+}
+
+.nav__link {
     color: #150101;
     cursor: pointer;
 }
