began section info

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,5 +1,5 @@
 .hero {
-    background: hsl(340, 82%, 94%);
+    background: #faecf1;
     padding-top: 150px;
     background-size: cover;
     min-height: 862px;
