--- a/css/components/icecream.css
+++ b/css/components/icecream.css
@@ -4,6 +4,7 @@
 }
 
 .icecream__title {
+    padding-top: 200px;
     max-width: 350px;
     font-family: Hind Madurai;
     font-style: normal;
@@ -14,6 +15,8 @@
 }
 
 .icecream__description {
+    padding-top: 20px;
+    padding-bottom: 35px;
     max-width: 442px;
     font-family: Roboto;
     font-style: normal;
