--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,4 @@
 @import './components/hero.css';
 @import './components/info.css';
 @import './components/icecream.css';
+@import './components/products.css';
