--- a/css/components/products.css
+++ b/css/components/products.css
@@ -3,6 +3,7 @@
 }
 
 .products__title {
+    margin-top: 140px;
     text-align: center;
     font-family: Hind Madurai;
     font-style: normal;
@@ -13,6 +14,7 @@
 }
 
 .products__item {
+    margin-top: 65px;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -30,6 +32,5 @@
 .products__link:hover {
     color: #000;
     opacity: 1;
-    border-bottom: #D64374;
-    border: 12px;
+    box-shadow: inset 0 -3px 0 0 #D64374;
 }
